--- a/src/pages/en/404.astro
+++ b/src/pages/en/404.astro
@@ -1,9 +1,9 @@
 ---
 // Astro imports - Components
-import BaseLayout from '../layouts/BaseLayout.astro'
+import BaseLayout from '../../layouts/BaseLayout.astro'
 
 // Style Imports
-import { buttonVariants } from '../components/ui/button'
+import { buttonVariants } from '../../components/ui/button'
 
 // create static page instead of SSR
 export const prerender = true
