--- a/src/components/Entrenamientos.astro
+++ b/src/components/Entrenamientos.astro
@@ -7,6 +7,10 @@ import { Home, Pizza, Dumbbell } from 'lucide-react'
 // Astro Imports - Components
 import TrainingCard from './TrainingCard.astro'
 import Header from './layout/Header.astro'
+
+// Translation Imports
+import { getLangFromUrl, useTranslations } from '../i18n/utils'
+const lang = getLangFromUrl(Astro.url)
 ---
 
 <section
@@ -17,7 +21,7 @@ import Header from './layout/Header.astro'
   <div
     class="flex max-w-[1680px] flex-col items-center justify-center gap-10 p-10 md:flex-row md:gap-14"
   >
-  <!-- Services List -->
+    <!-- Services List -->
     {
       services.map(({ title, description, image, info, precio }) => (
         <TrainingCard {title} {description} {image} {info} {precio} />
@@ -32,7 +36,7 @@ import Header from './layout/Header.astro'
     <div
       class="flex w-full flex-col items-center justify-center gap-10 md:flex-row"
     >
-    <!-- Include List -->
+      <!-- Include List -->
       {
         include.map(({ title, description }) => {
           // Function to get an icon with the title
@@ -55,7 +59,7 @@ import Header from './layout/Header.astro'
                 {getIcon()}
                 <h4 class="text-lg font-bold">{title}</h4>
               </div>
-              <p class="text-sm text-muted-foreground">{description}</p>
+              <p class="text-sm text-muted-foreground">{description[lang]}</p>
             </div>
           )
         })
