--- a/src/components/TrainingCard.astro
+++ b/src/components/TrainingCard.astro
@@ -5,11 +5,18 @@ import { Image } from 'astro:assets'
 // Props interface
 interface Props {
   title: string
-  description: string
+  description: {
+    es: string
+    en: string
+  }
   image: ImageMetadata
   info: string[]
   precio: string
 }
+
+// Translation Imports
+import { getLangFromUrl } from '../i18n/utils'
+const lang = getLangFromUrl(Astro.url)
 
 // Astro Props
 const { title, description, image } = Astro.props
@@ -26,6 +33,6 @@ const { title, description, image } = Astro.props
     <h4 class="text-bold text-2xl font-semibold leading-none tracking-tight">
       {title}
     </h4>
-    <p class="text-muted-foreground">{description}</p>
+    <p class="text-muted-foreground">{description[lang]}</p>
   </div>
 </div>
