--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -11,12 +11,16 @@ type Props = CollectionEntry<'blog'>
 
 // Astro Props
 const { post } = Astro.props
+
+// Translation Imports
+import { getLangFromUrl } from '../../i18n/utils'
+const lang = getLangFromUrl(Astro.url)
 ---
 
 <article class="group space-y-4">
   <!-- Images -->
   <a
-    href={`/blog/${post.slug}/`}
+    href={`/${lang}/blog/${post.slug}/`}
     class="flex h-52 transition duration-300 group-hover:-translate-y-2 group-hover:shadow-xl"
   >
     <Image
@@ -52,7 +56,7 @@ const { post } = Astro.props
 
   <!-- Title -->
   <div>
-    <a href={`/blog/${post.slug}/`} class="group-hover:underline">
+    <a href={`/${lang}/blog/${post.slug}/`} class="group-hover:underline">
       <h2
         class="font-heading text-balance line-clamp-3 text-xl leading-snug md:text-2xl"
         transition:name={'title-' + post.slug}
