--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -60,7 +60,7 @@ const jsonLD = jsonLDGenerator({
 <meta name="generator" content={Astro.generator} />
 <meta
   name="keywords"
-  content="boxeo en Marbella, boxeo en San Pedro de Alcántara, kickboxing en Marbella, kickboxing en San Pedro de Alcántara, entrenador de boxeo, entrenador de kickboxing, entrenador a domicilio, entrenamiento personalizado, grupos reducidos, escuela cubana de boxeo, entrenamiento en area libre"
+  content="boxeo en Marbella, boxeo en San Pedro de Alcántara, kickboxing en Marbella, kickboxing en San Pedro de Alcántara, entrenador de boxeo, entrenador de kickboxing, entrenador a domicilio, entrenamiento personalizado, grupos reducidos, escuela cubana de boxeo, entrenamiento en area libre, Gimnasio de boxeo en Marbella, Clases de boxeo para principiantes, Fitness en San Pedro de Alcántara, Clases de artes marciales, Combate deportivo, Entrenamiento de autodefensa, Entrenamiento de alta intensidad, Artes marciales mixtas, Boxeo para principiantes, Clases de defensa personal, Técnica de golpeo, Ejercicios cardiovasculares, Entrenamiento de resistencia, Sparring en Marbella, Condición física en Marbella, Fitness y bienestar, Club de boxeo, Clases de kickboxing para mujeres"
 />
 <meta name="subject" content="Combat sports training business" />
 <meta name="language" content="ES" />
