--- a/src/pages/en/blog/index.astro
+++ b/src/pages/en/blog/index.astro
@@ -23,7 +23,7 @@ export const prerender = true
   title="NFC Blog"
   description="Articulos actualizados sobre bienestar, deportes de combate y mucho mas"
 >
-  <section class="mx-auto max-w-[1680px]">
+  <section class="mx-auto max-w-[1680px] px-5">
     <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
     <!-- Posts card Lists -->
     <div
