--- a/src/pages/es/blog/[...slug].astro
+++ b/src/pages/es/blog/[...slug].astro
@@ -58,7 +58,7 @@ export const prerender = true
   <div class="container relative max-w-[1020px] py-10 pt-10">
     <a
       href="/es/blog"
-      class="absolute left-[-200px] top-10 hidden text-muted-foreground transition-colors duration-200 hover:text-secondary xl:inline-flex"
+      class="absolute left-[-150px] top-10 hidden items-center justify-center text-muted-foreground transition-colors duration-200 hover:text-secondary xl:flex"
       transition:animate="slide"
     >
       <ChevronLeft height="20px" />
@@ -74,6 +74,7 @@ export const prerender = true
           <a
             class="mr-3 rounded-lg bg-accent px-3 py-1 text-xs text-white no-underline transition-colors duration-200 hover:bg-accent/50 md:text-sm"
             href={`/es/categories/${category}`}
+            aria-label={`Categorie-link-${category}`}
           >
             {capitalizer(category)}
           </a>
@@ -119,6 +120,7 @@ export const prerender = true
             <a
               class="text-secondary no-underline transition-colors duration-200 hover:text-secondary/70"
               href={`/es/blog/${item.slug}`}
+              aria-label={`Related-link-${item.slug}`}
             >
               {item.data.title}
             </a>
