--- a/src/pages/es/categories/[category].astro
+++ b/src/pages/es/categories/[category].astro
@@ -38,7 +38,7 @@ export const prerender = true
   title={`NFC Blog - ${capitalizer(category)}`}
   description="Articulos actualizados sobre bienestar, deportes de combate y mucho mas"
 >
-  <section class="mx-auto max-w-[1680px]">
+  <section class="mx-auto max-w-[1680px] px-5">
     <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
     <!-- Posts Card List -->
     <div
