--- a/src/components/Faqs.astro
+++ b/src/components/Faqs.astro
@@ -7,8 +7,9 @@ import { ChevronDown } from 'lucide-react'
 import Header from './layout/Header.astro'
 
 // Translation Imports
-import { getLangFromUrl } from '../i18n/utils'
+import { getLangFromUrl, useTranslations } from '../i18n/utils'
 const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 ---
 
 <section
@@ -16,7 +17,7 @@ const lang = getLangFromUrl(Astro.url)
   id="faq"
 >
   <hr class="h-2 w-full" />
-  <Header title="Preguntas Frequentes" subtitle="Descubre algunas de las" />
+  <Header title={t('faq-title')} subtitle={t('faq-subtitle')} />
   <div
     class="flex w-full max-w-[1680px] flex-col items-center justify-center px-10 md:px-20"
   >
