--- a/src/components/Testimonios.astro
+++ b/src/components/Testimonios.astro
@@ -5,13 +5,18 @@ import { testimonios } from '../constants/index'
 // Atro Imports - Components
 import Header from './layout/Header.astro'
 import TestimonioCard from './TestimonioCard.astro'
+
+// Translation Imports
+import { getLangFromUrl, useTranslations } from '../i18n/utils'
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 ---
 
 <section
   class="flex flex-col items-center gap-10 bg-gradient-to-t from-background to-primary/10 pb-10 pt-8 dark:to-primary/5"
   id="testimonios"
 >
-  <Header title="Nuestos Clientes" subtitle="Conoce un poco de lo que dice" />
+  <Header title={t('testimonial-title')} subtitle={t('testimonial-subtitle')} />
   <!-- Main Testimonio List -->
   <div class="grid max-w-[1680px] grid-cols-1 gap-5 px-10 md:grid-cols-3">
     {
@@ -34,7 +39,7 @@ import TestimonioCard from './TestimonioCard.astro'
       class="transition-colors duration-200 hover:text-accent/80"
       href="https://www.google.es/maps/place/Nano+Fighters+Club/@36.6994397,-4.4383405,17z/data=!3m1!4b1!4m6!3m5!1s0xd72f90703cb3159:0xef91fba1a80a4a3a!8m2!3d36.6994354!4d-4.4357656!16s%2Fg%2F11sj9ml9pp?hl=es&entry=ttu"
       rel="noreferrer noopener"
-      target="_blank">ver mas aqui</a
+      target="_blank">{t('testimonial-link')}</a
     >
   </div>
 </section>
