--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -13,7 +13,7 @@ export const prerender = true
 
 <BaseLayout
   title="Nano Fighters Club"
-  description="Experience Excellence in Boxing and Kickboxing with Personalized In-Home Training, Designed to Fit Your Pace and Goals, Maximizing Your Potential in Combat Martial Arts."
+  description="Experience Excellence in Boxing and Kickboxing with Personalized In-Home Training, Designed to Fit Your Pace and Goals."
 >
   <Hero />
   <About />
