--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -13,7 +13,7 @@ export const prerender = true
 
 <BaseLayout
   title="Nano Fighters Club"
-  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos,Maximizando Tu Potencial en las Artes Marciales de Combate."
+  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos."
 >
   <Hero />
   <About />
