--- a/src/components/Testimonios.astro
+++ b/src/components/Testimonios.astro
@@ -36,6 +36,7 @@ const t = useTranslations(lang)
   <!-- Google Maps reviwes link -->
   <div class="mt-5 flex w-full animate-pulse justify-end px-10 text-accent">
     <a
+      title="Testimonial-links"
       class="transition-colors duration-200 hover:text-accent/80"
       href="https://www.google.es/maps/place/Nano+Fighters+Club/@36.6994397,-4.4383405,17z/data=!3m1!4b1!4m6!3m5!1s0xd72f90703cb3159:0xef91fba1a80a4a3a!8m2!3d36.6994354!4d-4.4357656!16s%2Fg%2F11sj9ml9pp?hl=es&entry=ttu"
       rel="noreferrer noopener"
