--- a/src/pages/en/404.astro
+++ b/src/pages/en/404.astro
@@ -21,7 +21,7 @@ export const prerender = true
     <p class="mb-4 leading-7 [&:not(:first-child)]:mt-6">
       Lo Sentimos, no pudimos encontrar la pagina que esta buscando!
     </p>
-    <a href="/" rel="noreferrer" class={buttonVariants()}>
+    <a href="/" rel="noreferrer" class={buttonVariants()} title="back to the Home Page">
       Volver a la Paginna Principal</a
     >
   </div>
