--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -18,7 +18,7 @@ const lang: 'es' | 'en' = getLangFromUrl(Astro.url)
   >
     <!-- Logo -->
     <div class="flex gap-6 md:gap-10">
-      <a href="/" class="flex items-center space-x-2">
+      <a href="/" class="flex items-center space-x-2" title="Home Link">
         <span class="inline-block text-2xl font-bold">NFC</span>
       </a>
     </div>
@@ -32,6 +32,7 @@ const lang: 'es' | 'en' = getLangFromUrl(Astro.url)
             navLinks.map((link) => (
               <li>
                 <a
+                  title={`Link to ${link.label}`}
                   class="transition-colors duration-200 hover:text-secondary"
                   href={`/${lang}${link.link}`}
                 >
