--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -21,6 +21,16 @@ const lang = getLangFromUrl(Astro.url)
       Copyright © 2022 Nano Fighters
     </p>
 
+    <!-- Portfolio Link -->
+    <small>
+      Made with <span class="animate-pulse">❤️</span> and Powered by <a
+        href="https://www.adrian-alvarez.dev/es/"
+        target="_blank"
+        class="text-gray-400 underline transition-colors duration-200 hover:text-gray-50"
+        >Adrian</a
+      >
+    </small>
+
     <!-- Contact Link List -->
     <ul class="flex gap-2">
       {
