--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -68,10 +68,10 @@ const newLangUrl = changeLangFromUrl(Astro.url, lang)
 <meta name="Classification" content="Business" />
 <meta
   name="author"
-  content="Adrian 'Nano' Alvarez, adrian.alvarezalonso1991@gmail.com"
+  content="Adrian 'Nano' Alvarez, adrian.alvarezalonso1991@gmail.com, https://www.adrian-alvarez.dev"
 />
-<meta name="designer" content="Adrian 'Nano' Alvarez" />
-<meta name="owner" content="Adrian 'Nano' Alvarez" />
+<meta name="designer" content="Adrian 'Nano' Alvarez, adrian.alvarezalonso1991@gmail.com, https://www.adrian-alvarez.dev" />
+<meta name="owner" content="Adrian 'Nano' Alvarez, adrian.alvarezalonso1991@gmail.com, https://www.adrian-alvarez.dev" />
 <link rel="canonical" href={canonicalURL} />
 <meta name="title" content={title} />
 <meta name="description" content={description} />
