--- a/src/pages/en/blog/[...slug].astro
+++ b/src/pages/en/blog/[...slug].astro
@@ -90,6 +90,7 @@ export const prerender = true
         src={image}
         alt={title}
         transition:name={'img-' + slug}
+        loading="eager"
       />
       <!-- Date and Author -->
       <div class="flex items-center justify-between">
