feat: Added to the es home page

--- a/src/components/Entrenamientos.astro
+++ b/src/components/Entrenamientos.astro
@@ -15,7 +15,7 @@ const t = useTranslations(lang)
 ---
 
 <section
-  class="flex flex-col items-center justify-center gap-10 bg-primary/10 pt-8 dark:bg-primary/5"
+  class="flex flex-col items-center justify-center gap-10 bg-primary/10 pt-8"
   id="entrenamientos"
 >
   <Header title={t('services-title')} subtitle={t('services-subtitle')} />
