--- a/src/components/Feed.astro
+++ b/src/components/Feed.astro
@@ -6,7 +6,7 @@ const t = useTranslations(lang)
 ---
 
 <section
-  class="flex flex-col items-center gap-10 overflow-x-hidden bg-gradient-to-b from-background to-primary/10 pt-10 dark:to-primary/5 md:pt-10"
+  class="flex flex-col items-center gap-10 overflow-x-hidden bg-primary/10 pt-8 md:pt-10"
   id="acerca"
 >
   <hr class="h-2 w-full" />
