--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -6,6 +6,7 @@ import About from '../../components/About.astro'
 import Entrenamientos from '../../components/Entrenamientos.astro'
 import Testimonios from '../../components/Testimonios.astro'
 import Faqs from '../../components/Faqs.astro'
+import Feed from '../../components/feed.astro'
 
 // create static page instead of SSR
 export const prerender = true
@@ -18,6 +19,7 @@ export const prerender = true
   <Hero />
   <About />
   <Entrenamientos />
+  <Feed />
   <Testimonios />
   <Faqs />
 </BaseLayout>
